[tool.poetry]
name = "aw-downloader"
version = "0.1.0"
description = ""
authors = ["goblin-town"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"
enlighten = "^1.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
download = "aw_downloader.downloader-selenium:main"